--- a/src/main/resources/edu/epidemicsimulation/practice/simulation.fxml
+++ b/src/main/resources/edu/epidemicsimulation/practice/simulation.fxml
@@ -1,10 +1,333 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.geometry.Point3D?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.StackedAreaChart?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.epidemicsimulation.practice.SimulationController">
-    <children>
-        <Pane fx:id="simulationPane" prefWidth="1000" prefHeight="1000"/>
-    </children>
-</VBox>
+<AnchorPane fx:id="mainPane" prefHeight="900.0" prefWidth="1600.0" style="-fx-background-color: #f4e1e1;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.epidemicsimulation.practice.SimulationController">
+   <children>
+      <Pane fx:id="simulationPane" prefHeight="680.0" prefWidth="1270.0" style="-fx-background-color: #c2c3d7;" />
+      <VBox fx:id="sidebar" layoutX="1270.0" prefHeight="900.0" prefWidth="330.0" style="-fx-background-color: #c1d6ce;">
+         <children>
+            <Label fx:id="infoLabel" alignment="CENTER" prefHeight="45.0" prefWidth="460.0" text="Общая информация">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <GridPane fx:id="infoGrid" layoutY="20.0" prefHeight="130.0" prefWidth="460.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="225.0" minWidth="10.0" prefWidth="214.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="116.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="totalPeopleLabel" prefHeight="20.0" prefWidth="179.0" text="Общее количество людей:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="healthyLabel" prefHeight="20.0" prefWidth="172.0" text="Здоровые:" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="infectedLabel" prefHeight="20.0" prefWidth="179.0" text="Зараженные:" GridPane.rowIndex="2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="recoveredLabel" layoutY="30.0" prefHeight="20.0" prefWidth="179.0" text="Выздоровевшие:" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="deceasedLabel" prefHeight="20.0" prefWidth="179.0" text="Умершие:" GridPane.rowIndex="4">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <rotationAxis>
+                        <Point3D z="20.0" />
+                     </rotationAxis>
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </Label>
+                  <Label fx:id="healthyCountLabel" prefHeight="20.0" prefWidth="137.0" text="-" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="totalPeopleCountLabel" prefHeight="20.0" prefWidth="131.0" text="-" GridPane.columnIndex="1">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="infectedCountLabel" prefHeight="20.0" prefWidth="179.0" text="-" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="recoveredCountLabel" prefHeight="20.0" prefWidth="179.0" text="-" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="deceasedCountLabel" prefHeight="20.0" prefWidth="179.0" text="-" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Label>
+               </children>
+            </GridPane>
+            <Label fx:id="paramsLabel" alignment="CENTER" prefHeight="45.0" prefWidth="377.0" text="Изменяемые параметры">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Pane fx:id="paramsPane" prefHeight="460.0" prefWidth="330.0">
+               <children>
+                  <Label fx:id="mortalityRateLabel" layoutY="5.0" prefHeight="28.0" prefWidth="156.0" text="Уровень смертности">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Slider fx:id="mortalityRateSlider" layoutY="20.0" max="30.0" prefHeight="28.0" prefWidth="240.0">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Slider>
+                  <Label fx:id="infectionRateLabel" layoutY="45.0" prefHeight="28.0" prefWidth="185.0" text="Вероятность заражения">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Slider fx:id="infectionRateSlider" layoutY="60.0" max="1.0" prefHeight="28.0" prefWidth="240.0">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Slider>
+                  <Label fx:id="infectionDurationLabel" layoutY="85.0" prefHeight="28.0" prefWidth="185.0" text="Длительность инфекции">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Slider fx:id="infectionDurationSlider" layoutY="100.0" max="30.0" min="1.0" prefHeight="28.0" prefWidth="240.0">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Slider>
+                  <Label fx:id="immunityDurationLabel" layoutY="125.0" prefHeight="28.0" prefWidth="200.0" text="Длительность иммунитета">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Slider fx:id="immunityDurationSlider" layoutY="140.0" max="365.0" min="1.0" prefHeight="30.0" prefWidth="240.0">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Slider>
+                  <Label fx:id="virusNameLabel" layoutY="366.0" prefHeight="40.0" prefWidth="138.0" text="Название вируса:">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <TextField fx:id="virusNameTextField" layoutX="138.0" layoutY="374.0" prefHeight="25.0" prefWidth="150.0" />
+                  <Label fx:id="peopleLabel" layoutY="165.0" prefHeight="28.0" prefWidth="156.0" text="Количество людей">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Slider fx:id="peopleSlider" layoutY="180.0" max="1000.0" min="100.0" prefHeight="30.0" prefWidth="240.0">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Slider>
+                  <CheckBox fx:id="childrenCheckBox" disable="true" layoutY="265.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="200.0" text="Дети">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </CheckBox>
+                  <CheckBox fx:id="adultsCheckBox" disable="true" layoutY="290.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="200.0" text="Взрослые">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </CheckBox>
+                  <CheckBox fx:id="elderlyCheckBox" disable="true" layoutY="315.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="200.0" text="Пожилые">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </CheckBox>
+                  <CheckBox fx:id="vulnerableAgeGroupsCheckBox" layoutY="230.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="240.0" text="Уязвимые возрастные группы">
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </CheckBox>
+                  <Label fx:id="numberImmunityDurationLabel" alignment="CENTER_RIGHT" layoutX="190.0" layoutY="125.0" prefHeight="28.0" prefWidth="80.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="numberInfectionDurationLabel" alignment="CENTER_RIGHT" layoutX="190.0" layoutY="87.0" prefHeight="28.0" prefWidth="80.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="numberPeopleLabel" alignment="CENTER_RIGHT" layoutX="190.0" layoutY="166.0" prefHeight="28.0" prefWidth="80.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="numberInfectionRateLabel" alignment="CENTER_RIGHT" layoutX="190.0" layoutY="46.0" prefHeight="28.0" prefWidth="80.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="numberMortalityRateLabel" alignment="CENTER_RIGHT" layoutX="190.0" layoutY="6.0" prefHeight="28.0" prefWidth="80.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+               </children>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Pane>
+            <Pane fx:id="controlPane" prefHeight="220.0" prefWidth="330.0">
+               <children>
+                  <ButtonBar layoutY="130.0" prefHeight="90.0" prefWidth="330.0">
+                    <buttons>
+                        <Button fx:id="startButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" text="Начать" />
+                        <Button fx:id="stopButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" text="Стоп" />
+                      <Button fx:id="resetButton" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" text="Сброс" />
+                    </buttons>
+                     <padding>
+                        <Insets right="20.0" />
+                     </padding>
+                  </ButtonBar>
+                  <Label fx:id="startTimeLabel" layoutY="23.0" prefHeight="40.0" prefWidth="200.0" text="Время начала: --:--:--">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+                  <Label fx:id="elapsedTimeLabel" layoutY="63.0" prefHeight="40.0" prefWidth="297.0" text="Прошедшее время: 00:00:00">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                  </Label>
+               </children>
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </Pane>
+         </children>
+      </VBox>
+      <HBox fx:id="BottomHBox" layoutY="680.0" style="-fx-background-color: #f4e1e1;">
+         <children>
+            <StackedAreaChart fx:id="stackedAreaChart" cache="true" prefHeight="220.0" prefWidth="635.0">
+              <xAxis>
+                <NumberAxis label="Время" minorTickVisible="false" side="BOTTOM" tickLabelsVisible="false" fx:id="xAxis" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis fx:id="yAxis" label="Люди" minorTickVisible="false" side="LEFT" tickLabelsVisible="false" />
+              </yAxis>
+            </StackedAreaChart>
+            <VBox fx:id="consoleVBox" prefHeight="220.0">
+               <children>
+                  <Label fx:id="consoleLabel" prefHeight="20.0" prefWidth="630.0" style="-fx-font-weight: bold; -fx-text-fill: #2c3e50;" text="Console">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                  </Label>
+                  <TextArea fx:id="consoleTextArea" editable="false" prefHeight="195.0" prefWidth="603.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" right="5.0" />
+                     </VBox.margin>
+                  </TextArea>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+   </children>
+</AnchorPane>
